--- a/src/css/todo.css
+++ b/src/css/todo.css
@@ -26,7 +26,7 @@
     align-items: center;
     margin-bottom: 20px;
 }
-#list-container{display: flex; align-items: center; justify-content: space-between; margin-bottom: 16px; border-bottom: 1px solid #e8e8e8; padding-bottom: 16px;}
+#list-container{display: flex; justify-content: space-between; margin-bottom: 16px; border-bottom: 1px solid #e8e8e8; padding-bottom: 16px;}
 #list-container button{margin-left: 10px; padding: 9px 20px;}
 .todo-app img{
     width: 30px;
@@ -119,3 +119,64 @@ tr td{
 .indexclass{
     margin-right: 10px;
 }  
+
+
+/* toggle */
+.switch {
+    position: relative;
+    display: inline-block;
+    width: 60px;
+    height: 34px;
+  }
+  
+  .slider {
+    position: absolute;
+    cursor: pointer;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    background-color: #ccc;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  .slider:before {
+    position: absolute;
+    content: "";
+    height: 26px;
+    width: 26px;
+    left: 4px;
+    bottom: 4px;
+    background-color: white;
+    -webkit-transition: .4s;
+    transition: .4s;
+  }
+  
+  input:checked + .slider {
+    background-color: #2196F3;
+  }
+  
+  input:focus + .slider {
+    box-shadow: 0 0 1px #2196F3;
+  }
+  
+  input:checked + .slider:before {
+    -webkit-transform: translateX(26px);
+    -ms-transform: translateX(26px);
+    transform: translateX(26px);
+  }
+  
+  /* Rounded sliders */
+  .slider.round {
+    border-radius: 34px;
+  }
+  
+  .slider.round:before {
+    border-radius: 50%;
+  }
+
+  .line-through {
+    text-decoration: line-through;
+    color: gray;
+  }
